# mcp-manager

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  memory_client.rs  persistence.rs  state.rs  stats.rs  tray.rs
src-tauri/src/commands/: connections.rs  data_management.rs  discovery.rs  integrations.rs  memories.rs  memory.rs  mod.rs  oauth.rs  plugins.rs  proxy.rs  registry.rs  servers.rs  skills.rs  skills_config.rs  stats.rs  status.rs
src-tauri/src/mcp/: client.rs  discovery.rs  http_transport.rs  mod.rs  oauth.rs  proxy.rs  transport.rs  types.rs
src-tauri/src/state/: mod.rs  plugin.rs  registry.rs  server.rs  skill.rs  skills_registry.rs
src-tauri/src/state/providers/: mcpanvil.rs  mod.rs  official_registry.rs  skillssh.rs
src/assets/: main.css
src/components/: LogViewer.vue  PluginList.vue  PluginMarketplaceCard.vue  ServerForm.vue  ServerList.vue  SettingsDiscovery.vue  SettingsIntegrations.vue  SettingsMemory.vue  SettingsSkills.vue  SkillList.vue  SkillMarketplaceCard.vue  StatusBar.vue  ToolBrowser.vue
src/composables/: useEvents.ts  useMemoryGraph.ts  useMemorySearch.ts  useServerLogs.ts  useServerStatus.ts  useSystemStatus.ts
src/stores/: logs.ts  memories.ts  plugins.ts  servers.ts  skills.ts  tools.ts
src/types/: discovery.ts  embedding.ts  integration.ts  mcp.ts  memory.ts  oauth.ts  plugin.ts  proxy.ts  server.ts  skill.ts  stats.ts  status.ts
src/views/: AddPluginView.vue  AddServerView.vue  AddSkillView.vue  EditServerView.vue  MemoryBrowserView.vue  MemoryDataView.vue  MemoryGraphView.vue  PluginDetailView.vue  ServerDetailView.vue  SettingsView.vue  SkillDetailView.vue  SystemStatusView.vue
