[package]
name = "mcp-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mcp-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
url = "2"
